# hardening-suite

./: README.md  pyproject.toml
.github/workflows/: ci.yml
app/cli/: main.py  runner.py
app/collectors/: ssh.py
app/core/: constants.py  exceptions.py  logger.py  models.py
app/policies/ssh/: ssh_hardening.py
app/remediators/: audit_system.py  fail2ban.py  firewall.py  ssh_bootstrap.py  ssh_manager.py  system_advanced.py  system_hardening.py
app/utils/: files.py  shell.py  system.py  user_context.py
app/validators/: ssh_public_key.py  ssh_validator.py
state/backups/: sshd_config.20260402_075038.bak  sshd_config.20260402_090027.bak
tests/: test_fail2ban_jail.py  test_main_cli.py  test_runner.py  test_ssh_public_key.py  test_sshd_global_parser.py  test_system_advanced_modprobe.py
tests/integration/: __init__.py  test_linux_smoke.py
