[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hardening-suite"
version = "0.1.0"
description = "Automação de hardening para Linux (Ubuntu/Debian)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pydantic>=2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
